--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-MONGO_URL = mongodb+srv://admin:<admin12345>@shopshoes.cnqmb.mongodb.net/ShoesDatabase?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://admin:admin12345@shopshoes.cnqmb.mongodb.net/ShoesDatabase?retryWrites=true&w=majority
